drumkv1 - an old-school drum-kit sampler
----------------------------------------

ChangeLog


GIT HEAD

- Unassigned element/sample keys are now shown grayed out on the
  virtual piano keyboard. (EXPERIMENTAL)
- Stepping up next development cycle (Qt >= 6.9)


1.3.1  2025-04-03  An Early Spring'25 Release.

- Fixed command line parsing (QCommandLineParser/Option) to not
  exiting the application with a segfault when showing help and
  version information.


1.3.0  2025-01-16  A New-Year'25 Release.

- Last current element is now preserved and selected on preset
  and/or LV2 plug-in load (host permiting).

- LV2 Plug-in: element parameters as legacy input control ports
  are not automatable nor addressable from the host anymore.

- LV2 Plug-in: avoid making element changes as regular parameter
  updates, which marked the host's state dirty (modified).


1.2.0  2024-12-15  An End-of-Year'24 Release.

- Configure/Tuning: fixed initial scale and keyboard map tooltips.


1.1.3  2024-10-31  A Halloween'24 Release.

- Prepping up next development cycle (Qt >= 6.8)


1.1.2  2024-10-02  An Early-Fall'24 Release.

- Configure: apply Frame/Time display format and Use GM Standard
  drum names options immediately on acceptance, no need to restart
  the application to take effect anymore.
- Configure: disable widget style option on LV2 plug-ins only,
  for which it wasn't working on the JACK stand-alones either.


1.1.1  2024-09-20  An End-ofSummer'24 Release.

- Fixed all elements offset-start/end state save and restore.
- NSM: prevent loading any preset(s) given on command line.


1.1.0  2024-08-28  A Mid-Summer'24 Release.

- Smooth and seamless voice/note deferred switching, whenever the
  sample file and wavetable is reset or changed.
- LV2 Plug-in Control Input Port-Change Request extension is not
  tagged experimental anymore.


1.0.0  2024-06-20  An Unthinkable Release.

- Making up the unthinkable (aka. v1.0.0)


0.9.91  2024-05-02  A Spring'24 Release Candidate 2.
