@@ -7,7 +7,9 @@ ChangeLog
 GIT HEAD
 
 - Unassigned element/sample keys are now shown grayed out on the
-  virtual piano keyboard. (EXPERIMENTAL)
+  virtual piano keyboard.
+- Added generic Ogg Vorbis container type filter (*.ogg) to sample
+  file requester dialog.
 - Stepping up next development cycle (Qt >= 6.9)
 
 
